--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -14,6 +14,7 @@
   --text-color: rgb(60, 60, 60);
   --text-color-2: rgb(90, 90, 90);
   --text-color-3: rgb(170, 170, 170);
+  --text-color-4: rgb(40, 40, 40);
   --button-hover: rgb(241, 247, 254);
   --button-hover-outline: rgb(171, 212, 254);
 }
