--- a/src/components/RibbonItem/RibbonItem.module.css
+++ b/src/components/RibbonItem/RibbonItem.module.css
@@ -18,8 +18,8 @@
   justify-content: center;
   align-items: flex-start;
 
-  width: 28px;
-  height: 28px;
+  width: var(--ribbon-icon-size);
+  height: var(--ribbon-icon-size);
   padding-top: 4px;
   margin-bottom: 6px;
   
