--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -24,4 +24,6 @@
   --button-blue: rgb(25, 121, 202);
   --button-blue-hover: rgb(41, 140, 225);
   --almost-white: rgb(253, 253, 255);
+
+  --ribbon-icon-size: 29px;
 }
