--- a/src/components/QuickAccessToolbar/QuickAccessToolbar.module.css
+++ b/src/components/QuickAccessToolbar/QuickAccessToolbar.module.css
@@ -6,7 +6,7 @@
   height: 30px;
   padding: 0 6px;
 
-  background-color: green;
+  /* background-color: green; */
 }
 .container::before,
 .container::after {
