--- a/src/components/TopBar/TopBar.module.css
+++ b/src/components/TopBar/TopBar.module.css
@@ -3,9 +3,9 @@
   justify-content: space-between;
 
   height: var(--topbar-height);
-  padding: 0 1px 0 8px;
+  padding-left: 8px;
   
-  background-color: red;
+  /* background-color: red; */
 
   box-sizing: border-box;
 }
