--- a/src/css/misc.css
+++ b/src/css/misc.css
@@ -29,4 +29,14 @@
     border: 1px solid var(--button-hover-outline);
   }
 
+  .app {
+    width: 100%;
+    height: 100vh;
+
+    background-image: url(../assets/global/background.jpg);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
 }
