made some icons to svgs, made every icon non-draggable

--- a/src/components/RibbonColors/RibbonColors.module.css
+++ b/src/components/RibbonColors/RibbonColors.module.css
@@ -6,9 +6,10 @@
 .colors-grid {
   display: grid;
   grid-template-columns: repeat(10, auto);
+  align-content: start;
   gap: 2px;
 
-  padding-top: 5px;
+  padding-top: 4px;
 }
 
 .color {
