--- a/src/components/RibbonItem/RibbonItem.module.css
+++ b/src/components/RibbonItem/RibbonItem.module.css
@@ -11,7 +11,11 @@
 }
 .container:hover {
   background-color: var(--selected-light);
-  border: 1px solid var(--selected-light-line);
+  border-color: var(--selected-light-line);
+}
+.container:active {
+  background-color: var(--selected-dark);
+  border: 1px solid var(--selected-dark-line);
 }
 .container--small {
   padding-top: calc(4px + (var(--ribbon-icon-size) - var(--ribbon-icon-small-size)) / 2);
