--- a/src/components/RibbonItemExpanded/RibbonItemExpanded.module.css
+++ b/src/components/RibbonItemExpanded/RibbonItemExpanded.module.css
@@ -5,7 +5,7 @@
   
   height: var(--ribbon-height);
   max-height: 100%;
-  padding: 5px;  
+  padding: 5px 5px 2px;  
   
   border: none;
   /* background-color: red; */
