--- a/src/css/misc.css
+++ b/src/css/misc.css
@@ -15,8 +15,7 @@
     align-items: center;
     justify-content: center;
   
-    padding: 4px;
-    height: 20px;
+    padding: 2px;
   
     border-radius: 0;
     background-color: transparent;
@@ -24,9 +23,16 @@
 
     box-sizing: border-box;
   }
+  .button--height-20 {
+    height: 20px;
+  }
   .button:hover {
     background-color: var(--button-hover);
-    border: 1px solid var(--button-hover-outline);
+    border-color: var(--button-hover-border);
+  }
+  .button:active {
+    background-color: var(--button-active);
+    border-color: var(--button-active-border);
   }
 
   .app {
@@ -37,6 +43,10 @@
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  .line-break {
+    padding-top: 3px;
   }
 
 }
