serious ui interactivity

--- a/src/components/Ribbon/Ribbon.module.css
+++ b/src/components/Ribbon/Ribbon.module.css
@@ -10,7 +10,7 @@
   border-top: 1px solid var(--bg-line);
   border-bottom: 1px solid var(--bg-line);
 
-  overflow: hidden;
+  /* overflow: hidden; */
   box-sizing: border-box;
 }
 
