--- a/src/components/RibbonControls/RibbonControls.module.css
+++ b/src/components/RibbonControls/RibbonControls.module.css
@@ -27,7 +27,7 @@
 
   color: var(--text-color);
   border-radius: 0;
-  border: none;
+  border: 1px solid transparent;
   font-size: 11px;
   letter-spacing: 1px;
   background-color: transparent;
@@ -46,21 +46,39 @@
 
 .button--blue {
   background-color: var(--button-blue);
+  border: none;
   color: var(--white);
 }
 .button--blue:hover {
   background-color: var(--button-blue-hover);
   border: none;
 }
+.button--blue:active {
+  background-color: rgb(18, 104, 179);
+}
 
 .button--active,
 .button--active:hover {
   --b: 1px solid var(--bg-line);
 
+  position: relative;
+
   background-color: var(--bg-ui);
   border-top: var(--b);
   border-left: var(--b);
   border-right: var(--b);
+}
+.button--active::after {
+  content: '';
+
+  position: absolute;
+  top: calc(100% + 1px);
+  
+  display: block;
+  width: 100%;
+  height: 1px;
+
+  background-color: var(--bg-ui);
 }
 
 .button--last {
