--- a/src/components/RibbonItemContainer/RibbonItemContainer.module.css
+++ b/src/components/RibbonItemContainer/RibbonItemContainer.module.css
@@ -67,6 +67,8 @@
   position: absolute;
   top: calc(100% + 1px);
 
+  padding-bottom: 2px;
+  
   background-color: var(--bg-ui);
-  box-shadow: 2px 2px var(--dropdown-shadow);
+  box-shadow: 1px 1px 4px rgb(120, 120, 120);
 }
