--- a/src/components/FileDropdown/FileDropdown.module.css
+++ b/src/components/FileDropdown/FileDropdown.module.css
@@ -1,4 +1,7 @@
 .container {
+  --gap: 8px;
+  --padding: 8px;
+  
   position: absolute;
   top: -1px;
   left: -1px;
@@ -24,9 +27,7 @@
 }
 
 .left {
-  width: 216px;
-  /* temporary */
-  height: 300px;
+  width: 240px;
   
   background-color: rgb(251, 252, 253);
   border-right: 1px solid rgb(220, 221, 222);
@@ -36,8 +37,6 @@
 
 .right {
   width: 100%;
-  /* temporary */
-  height: 300px;
 
   background-color: rgb(246, 247, 248);
 }
@@ -48,4 +47,62 @@
   
   background-color: rgb(254, 254, 255);
   border-top: 1px solid rgb(201, 213, 231);
+}
+
+.duo-container {
+  display: flex;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  gap: var(--gap);
+
+  width: 100%;
+  height: 43px;
+  padding: 0 0 0 var(--padding);
+
+  background-color: transparent;
+  border: 1px solid transparent;
+
+  box-sizing: border-box;
+}
+.duo-container:hover .button {
+  border-color: rgb(168, 210, 253);
+}
+.button:hover,
+.duo-container--active .button {
+  background-color: rgb(234, 244, 252);
+  border-color: rgb(168, 210, 253);
+}
+
+.arrow-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 24px;
+
+  background-color: transparent;
+  border: 1px solid transparent;
+  border-left: none;
+  color: rgb(94, 114, 140);
+  
+  flex-shrink: 0;
+}
+.duo-container:hover .arrow-button {
+  border-color: rgb(168, 210, 253);
+}
+.arrow-button:hover,
+.duo-container--active .arrow-button {
+  background-color: rgb(234, 244, 252);
+  border-color: rgb(168, 210, 253);
+}
+
+.border {
+  width: calc(100% - var(--gap) - var(--padding) - 32px);
+  height: 1px;
+  margin: 2px 0 2px auto;
+  
+  background-color: rgb(220, 221, 222);
 }
