--- a/src/css/misc.css
+++ b/src/css/misc.css
@@ -10,6 +10,21 @@
     font-family: 'segoe', 'Segoe UI', sans-serif;
   }
 
+  .head {
+    margin: 0;
+
+    font-size: 12px;
+    color: rgb(110, 110, 110);
+    font-weight: 600;
+  }
+  
+  .clean-list {
+    margin: 0;
+    padding: 0;
+
+    list-style: none;
+  }
+  
   .app {
     width: 100%;
     height: 100vh;
