--- a/src/css/misc.css
+++ b/src/css/misc.css
@@ -16,6 +16,16 @@
     font-size: 12px;
     color: rgb(110, 110, 110);
     font-weight: 600;
+    text-align: left;
+  }
+  .head--2 {
+    margin-bottom: 4px;
+    
+    color: rgb(88, 88, 88);
+    font-size: 11px;
+  }
+  .head--underline {
+    text-decoration: underline;
   }
   
   .clean-list {
