--- a/src/css/text.css
+++ b/src/css/text.css
@@ -26,6 +26,14 @@
     color: var(--black);
   }
 
+  .text--4 {
+    font-size: 11px;
+    color: var(--text-color);
+    text-align: left;
+    line-height: 1.3;
+    letter-spacing: 0.2px;
+  }
+
   .text--underline {
     text-decoration: underline;
   }
