--- a/src/components/Window/Window.module.css
+++ b/src/components/Window/Window.module.css
@@ -7,6 +7,9 @@
   box-sizing: border-box;
   user-select: none;
 }
+.container--focused {
+  border-color: rgb(255, 255, 255);
+}
 
 .top {
   position: absolute;
