--- a/src/css/ribbon-button.css
+++ b/src/css/ribbon-button.css
@@ -59,6 +59,10 @@
   background-color: var(--bg-ui);
 }
 
+.ribbon-button--no-ribbon::after {
+  display: none;
+}
+
 .ribbon-button--last {
   margin-left: 1px;
 }
