--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -57,6 +57,8 @@
   --ribbon-height: 98px;
   --ribbon-controls-height: 24px;
   --topbar-height: 30px;
+  --qa-toolbar-height: 25px;
+  
   --bottombar-height: 26px;
   --window-shadow: rgb(30, 40, 50);
   --window-border: rgb(150, 155, 161);
