--- a/src/components/Ribbon/Ribbon.module.css
+++ b/src/components/Ribbon/Ribbon.module.css
@@ -7,6 +7,7 @@
   align-items: flex-start;
   gap: 2px;
 
+  width: 100%;
   height: var(--ribbon-height);
   padding: 2px 4px;
 
@@ -16,10 +17,13 @@
   /* overflow: hidden; */
   box-sizing: border-box;
 }
-.ribbon--hidden {
+.ribbon--minimized {
   position: absolute;
   
   visibility: hidden;
+}
+.ribbon--expanded {
+  visibility: visible;
 }
 
 .ribbon * {
