--- a/src/components/Ribbon/Ribbon.module.css
+++ b/src/components/Ribbon/Ribbon.module.css
@@ -20,9 +20,14 @@
 .ribbon--minimized {
   position: absolute;
   
+  opacity: 0;
+
   visibility: hidden;
+  transition: opacity 200ms, visibility 200ms;
 }
 .ribbon--expanded {
+  opacity: 1;
+  
   visibility: visible;
 }
 
