--- a/src/css/button.css
+++ b/src/css/button.css
@@ -18,6 +18,7 @@
 .button:hover {
   background-color: var(--button-hover);
   border-color: var(--button-hover-border);
+  cursor: default;
 }
 .button:active {
   background-color: var(--button-active);
