--- a/src/components/RibbonSize/RibbonSize.module.css
+++ b/src/components/RibbonSize/RibbonSize.module.css
@@ -1,27 +1,45 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: relative;
+  z-index: 5;
 
+  width: 132px;
+  padding: 1px 1px 2px 1px;
+  
+  border: 1px solid rgb(220, 221, 222);
+  background-color: rgb(251, 252, 253);
+  box-shadow: 2px 2px 4px rgb(190, 190, 190);
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+
+  width: 100%;
+  height: 39px;
   padding: 4px;
-  margin: 0 2px;
 
   background-color: transparent;
   border: 1px solid transparent;
+
+  box-sizing: border-box;
 }
-.container:hover {
-  background-color: var(--selected-light);
-  border: 1px solid var(--selected-light-line);
+.button:hover {
+  background-color: rgb(219, 235, 252);
+  border-color: rgb(168, 210, 253);
+}
+.button--active {
+  background-color: rgb(206, 229, 252);
+  border-color: rgb(100, 165, 230);
+}
+.button:active div {
+  opacity: 0.4;
+}
+.button:last-of-type {
+  border-bottom: 1px solid rgb(220, 221, 222);
 }
 
-.image {
-  display: block;
-  width: var(--ribbon-icon-size);
-  height: var(--ribbon-icon-size);
-  margin-bottom: 6px;
-}
-
-.triangle {
-  display: block;
-  margin-top: 8px;
+.size {
+  width: 98%;
+  background-color: rgb(30, 57, 91);
 }
