--- a/src/css/text.css
+++ b/src/css/text.css
@@ -31,9 +31,12 @@
     color: var(--text-color);
     text-align: left;
     line-height: 1.3;
-    letter-spacing: 0.2px;
   }
 
+  .text--nowrap {
+    white-space: nowrap;
+  }
+  
   .text--underline {
     text-decoration: underline;
   }
