--- a/src/components/QuickAccessDropdown/QuickAccessDropdown.module.css
+++ b/src/components/QuickAccessDropdown/QuickAccessDropdown.module.css
@@ -9,7 +9,7 @@
   border: 1px solid rgb(255, 255, 255);
   border-radius: 3px;
   background-color: rgb(251, 252, 253);
-  box-shadow: 2px 2px 4px rgb(190, 190, 190);
+  box-shadow: 3px 3px rgba(190, 190, 190, 0.2);
   opacity: 1;
 
   box-sizing: border-box;
