--- a/src/components/RibbonItemContainer/RibbonItemContainer.module.css
+++ b/src/components/RibbonItemContainer/RibbonItemContainer.module.css
@@ -70,5 +70,5 @@
   padding-bottom: 2px;
   
   background-color: var(--bg-ui);
-  box-shadow: 1px 1px 4px rgb(120, 120, 120);
+  box-shadow: 2px 2px rgba(130, 130, 130, 0.2);
 }
