--- a/src/components/Canvas/Canvas.module.css
+++ b/src/components/Canvas/Canvas.module.css
@@ -11,6 +11,20 @@
   box-shadow: 5px 5px 2px rgba(100, 100, 100, 0.2);
 }
 
+.outline {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  border: 1px dotted rgb(0, 0, 0);
+
+  pointer-events: none;
+  box-sizing: border-box;
+}
+
 .bottom,
 .right {
   display: flex;
