--- a/src/components/QuickAccessDropdown/QuickAccessDropdown.module.css
+++ b/src/components/QuickAccessDropdown/QuickAccessDropdown.module.css
@@ -13,7 +13,7 @@
   opacity: 1;
 
   box-sizing: border-box;
-  transition: opacity 300ms;
+  /* transition: opacity 300ms; */
   z-index: 5;
 }
 .container--hidden {
