--- a/src/components/FileDropdown/FileDropdown.module.css
+++ b/src/components/FileDropdown/FileDropdown.module.css
@@ -11,7 +11,12 @@
   border: 1px solid rgb(132, 146, 166);
   border-radius: 3px;
 
-  z-index: 5;
+  z-index: 6;
+}
+.container--hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0s linear 300ms, opacity 300ms;
 }
 
 .top {
