--- a/src/components/RibbonItemContainer/RibbonItemContainer.module.css
+++ b/src/components/RibbonItemContainer/RibbonItemContainer.module.css
@@ -66,9 +66,15 @@
 .dropdown {
   position: absolute;
   top: calc(100% + 1px);
+  z-index: 5;
 
   padding-bottom: 2px;
   
   background-color: var(--bg-ui);
   box-shadow: 2px 2px rgba(130, 130, 130, 0.2);
+}
+.dropdown--hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0s linear 300ms, opacity 300ms;
 }
