--- a/src/components/ShapesGrid/ShapesGrid.module.css
+++ b/src/components/ShapesGrid/ShapesGrid.module.css
@@ -13,7 +13,6 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(4, auto);
 
   height: 66px;
   overflow: hidden;
@@ -27,6 +26,11 @@
   top: 0;
   left: 0;
   z-index: 5;
+}
+.dropdown--hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0s linear 300ms, opacity 300ms;
 }
 
 .expanded {
@@ -89,11 +93,26 @@
 }
 
 .button:first-of-type {
+  position: relative;
+
   height: 23px;
   border-top: 1px solid rgb(219, 220, 221);
 }
 .container:hover .button:first-of-type:not(.button--disabled) {
   border-color: rgb(145, 190, 235);
+}
+.container:hover .button:first-of-type.button--has-border:not(.button--disabled)::after {
+  content: '';
+
+  position: absolute;
+  top: calc(100% - 1px);
+  left: 0;
+
+  display: block;
+  width: 100%;
+  height: 1px;
+
+  background-color: rgb(145, 190, 235);
 }
 
 .container:hover .button:nth-of-type(2):not(.button--disabled) {
@@ -101,13 +120,28 @@
 }
 
 .button:last-of-type {
+  position: relative;
+
   height: 23px;
   border-bottom: 1px solid rgb(219, 220, 221);
 }
 .container:hover .button:last-of-type:not(.button--disabled) {
   border-color: rgb(145, 190, 235);
 }
+.container:hover .button:last-of-type.button--has-border:not(.button--disabled)::after {
+  content: '';
 
-.button--disabled img {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  display: block;
+  width: 100%;
+  height: 1px;
+
+  background-color: rgb(145, 190, 235);
+}
+
+.button--disabled svg {
   opacity: 0.5;
 }
