--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -9,6 +9,11 @@
   background-color: rgb(251, 252, 253);
   box-shadow: 2px 2px rgba(170, 170, 170, 0.2);
 }
+/* .popup--hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition: visibility 0s linear 300ms, opacity 300ms;
+} */
 
 .popup__head {
   padding: 3px 8px;
