a bit of testing, added vertical bars in ribbon, removed cursor flickering when resizing, improved the way window is moved, fixed bug causing pointeruup event to not fire when resizing

--- a/src/components/Window/Window.module.css
+++ b/src/components/Window/Window.module.css
@@ -111,7 +111,7 @@
 }
 
 .bottom-left:hover {
-  cursor: sw-resize;
+  cursor: ne-resize;
 }
 .bottom-left::before,
 .bottom-left::after {
@@ -126,7 +126,7 @@
 }
 
 .bottom-right:hover {
-  cursor: se-resize;
+  cursor: nw-resize;
 }
 .bottom-right::before,
 .bottom-right::after {
