--- a/src/components/Window/Window.module.css
+++ b/src/components/Window/Window.module.css
@@ -88,7 +88,7 @@
 }
 .top-left::before {
   /* made bigger purposefully, remove width to make it like other corners */
-  width: 16px;
+  /* width: 16px; */
   height: 16px;
 }
 .top-left::after {
