--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -58,6 +58,7 @@
   --ribbon-controls-height: 24px;
   --topbar-height: 30px;
   --qa-toolbar-height: 25px;
+  --inner-window-topbar-height: 30px;
   
   --bottombar-height: 26px;
   --window-shadow: rgb(30, 40, 50);
