--- a/src/components/ColorsWindow/ColorsWindow.module.css
+++ b/src/components/ColorsWindow/ColorsWindow.module.css
@@ -1,5 +1,6 @@
 .body {
   display: flex;
+  gap: 20px;
   
   padding: 6px;
   height: calc(100% - var(--inner-window-topbar-height));
@@ -13,7 +14,10 @@
   display: grid;
   align-content: space-between;
 
+  width: 200px;
   height: 100%;
+
+  flex-shrink: 0;
 }
 
 .grid {
@@ -32,6 +36,7 @@
   height: 16px;
 
   background-color: red;
+  
   border: 1px solid rgb(160, 160, 160);
   border-bottom-color: rgb(255, 255, 255);
   border-right-color: rgb(255, 255, 255);
@@ -82,12 +87,9 @@
   margin-top: 8px;
 }
 
-.color-picker {
-  width: 175px;
-  height: 187px;
-  
-  background-image: url(./assets//color-picker.png);
-  border: 1px solid rgb(160, 160, 160);
-  border-bottom-color: rgb(255, 255, 255);
-  border-right-color: rgb(255, 255, 255);
+.right {
+  display: grid;
+  align-content: space-between;
+
+  width: 100%;
 }
