--- a/src/css/text.css
+++ b/src/css/text.css
@@ -33,6 +33,10 @@
     line-height: 1.3;
   }
 
+  .text--centered {
+    text-align: center;
+  }
+  
   .text--nowrap {
     white-space: nowrap;
   }
