--- a/src/components/BottomBar/BottomBar.module.css
+++ b/src/components/BottomBar/BottomBar.module.css
@@ -14,6 +14,9 @@
 
   box-sizing: border-box;
 }
+.container--maximized {
+  background-image: none;
+}
 
 .left {
   display: flex;
@@ -43,4 +46,6 @@
 
   border-left: 1px solid var(--line-medium);
 }
-
+.container--maximized .right {
+  padding-right: 8px;
+}
