--- a/src/css/text.css
+++ b/src/css/text.css
@@ -33,6 +33,11 @@
     line-height: 1.3;
   }
 
+  .text--5 {
+    color: rgb(0, 50, 150);
+    font-size: 16px;
+  }
+
   .text--centered {
     text-align: center;
   }
