--- a/src/components/WindowPlacementIndicator/WindowPlacementIndicator.module.css
+++ b/src/components/WindowPlacementIndicator/WindowPlacementIndicator.module.css
@@ -1,16 +1,66 @@
 .container {
   position: absolute;
   z-index: 5;
+
+  width: 0px;
+  height: 0px;
   
   background-color: rgba(255, 255, 255, 0.05);
   border: 1px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 15px rgba(30, 40, 50, 0.8);
+
+  pointer-events: none;
+  transition: 300ms;
+}
+.container--fixed {
+  position: fixed;
+}
+
+.container--full {
+  top: 8px;
+  left: 8px;
+  width: calc(100% - 16px);
+  height: calc(100% - 16px);
+}
+
+.container--left {
+  top: 8px;
+  left: 8px;
+  width: calc(50% - 16px);
+  height: calc(100% - 16px);
+}
+
+.container--right {
+  top: 8px;
+  right: 8px;
+  width: calc(50% - 16px);
+  height: calc(100% - 16px);
 }
 
 .container--top-left {
   top: 8px;
   left: 8px;
+  width: calc(50% - 16px);
+  height: calc(50% - 16px);
+}
 
+.container--top-right {
+  top: 8px;
+  right: 8px;
+  width: calc(50% - 16px);
+  height: calc(50% - 16px);
+}
+
+.container--bottom-left {
+  bottom: 8px;
+  left: 8px;
+  width: calc(50% - 16px);
+  height: calc(50% - 16px);
+}
+
+.container--bottom-right {
+  bottom: 8px;
+  right: 8px;
   width: calc(50% - 16px);
   height: calc(50% - 16px);
 }
