--- a/src/css/misc.css
+++ b/src/css/misc.css
@@ -10,6 +10,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
+    width: 100%;
     /* height: 150vh;
     width: 150vw; */
     
@@ -17,14 +18,18 @@
     font-family: 'segoe', 'Segoe UI', sans-serif;
   }
     
+  #root {
+    /* width: 100%;
+    height: 100%; */
+  }
+  
   .app {
-    position: relative;
-    
-    width: 100%;
-    height: 100vh;
-
     width: 800px;
     height: 600px;
+    
+    /* width: 100%;
+    height: 100vh;
+    overflow: hidden; */
 
     background-image: url(../assets/global/background.jpg);
     background-position: bottom;
